; ModuleID = '/home/carl/AnghaBench/redis/src/extr_db.c_typeCommand.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_db.c_typeCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32 }

@LOOKUP_NOTOUCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @typeCommand(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @LOOKUP_NOTOUCH, align 4
  %13 = call i32* @lookupKeyReadWithFlags(i32 %6, i32 %11, i32 %12)
  store i32* %13, i32** %3, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @getObjectTypeName(i32* %15)
  %17 = call i32 @addReplyStatus(%struct.TYPE_4__* %14, i32 %16)
  ret void
}

declare dso_local i32* @lookupKeyReadWithFlags(i32, i32, i32) #1

declare dso_local i32 @addReplyStatus(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @getObjectTypeName(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
